argocd/apps/portfolio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: ghcr.io/titov32/portfolio:latest
          ports:
            - containerPort: 8000
