argocd/apps/portfolio/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
