argocd/apps/portfolio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-app
spec:
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
